- Solved bugs - email design belongs_to campaign

--- a/app/views/fat_free_crm/entities/attach.js.haml
+++ b/app/views/fat_free_crm/entities/attach.js.haml
@@ -12,7 +12,7 @@
 
 
   - else
-    $('##{h params[:assets]}').prepend('#{ j render(partial: "#{params[:assets]}/#{partial}", collection: [ @attachment ]) }');
+    $('##{h params[:assets]}').prepend('#{ j render(partial: "fat_free_crm/#{params[:assets]}/#{partial}", collection: [ @attachment ]) }');
     - if called_from_landing_page?(:accounts)
       = refresh_sidebar_for(:accounts, :show)
     - elsif called_from_landing_page?(:campaigns)
