--- a/app/views/fat_free_crm/campaigns/show.html.haml
+++ b/app/views/fat_free_crm/campaigns/show.html.haml
@@ -14,6 +14,8 @@
 
   = hook(:show_campaign_bottom, self, {entity: @campaign}) do
 
+    = render "fat_free_crm/campaign_urls/campaign_urls", object: @campaign
+
     = render "fat_free_crm/tasks/tasks", object: @campaign
 
     = render "fat_free_crm/leads/leads", object: @campaign
