Allow creation of email design in campaign

--- a/app/views/fat_free_crm/campaigns/show.html.haml
+++ b/app/views/fat_free_crm/campaigns/show.html.haml
@@ -16,6 +16,8 @@
 
     = render "fat_free_crm/campaign_urls/campaign_urls", object: @campaign
 
+    = render "fat_free_crm/email_designs/email_designs", object: @campaign
+
     = render "fat_free_crm/tasks/tasks", object: @campaign
 
     = render "fat_free_crm/leads/leads", object: @campaign
