Enable selection for email design

--- a/app/views/fat_free_crm/campaigns/show.html.haml
+++ b/app/views/fat_free_crm/campaigns/show.html.haml
@@ -26,6 +26,6 @@
 
     = render "fat_free_crm/versions/versions", object: @campaign
 
-    = load_select_popups_for(@campaign, :tasks, :leads, :opportunities)
+    = load_select_popups_for(@campaign, :tasks, :leads, :opportunities, :email_designs)
 
   #export= render "fat_free_crm/shared/export", action: :show
