--- a/app/views/layouts/fat_free_crm/application.html.haml
+++ b/app/views/layouts/fat_free_crm/application.html.haml
@@ -12,7 +12,7 @@
 
     = javascript_include_tag 'fat_free_crm/application'
 
-    - unless tabless_layout? || %w(en-US en-GB).include?(I18n.locale.to_s)
+    - unless tabless_layout? || %w(en en-US en-GB).include?(I18n.locale.to_s)
       = javascript_include_tag "vendor/jquery_ui_datepicker/jquery.ui.datepicker-#{I18n.locale}"
       = javascript_include_tag "vendor/jquery_ui_datepicker/jquery-ui-timepicker-#{I18n.locale}"
 
