--- a/app/views/fat_free_crm/campaigns/_metrics.html.haml
+++ b/app/views/fat_free_crm/campaigns/_metrics.html.haml
@@ -1,5 +1,5 @@
 - objectives = []
-- objectives << t(:revenue_number, number_to_currency(campaign.target_revenue, precision: 0)) if campaign.target_revenue
+- objectives << t(:revenue_number, number_to_currency(campaign.target_revenue, precision: 0, unit: Monetize.parse(Spree::Config[:currency]).symbol)) if campaign.target_revenue
 - objectives << t('pluralize.lead', count: campaign.target_leads) if campaign.target_leads
 - objectives << t(:conversion_number, number_to_percentage(campaign.target_conversion, precision: 1)) if campaign.target_conversion
 - unless objectives.empty?
@@ -9,7 +9,7 @@
 %dt
   - unless objectives.empty?
     %b #{t :actual}:
-  = t(:revenue_number, number_to_currency(campaign.revenue.to_f, precision: 0)) + " | "
+  = t(:revenue_number, number_to_currency(campaign.revenue.to_f, precision: 0, unit: Monetize.parse(Spree::Config[:currency]).symbol)) + " | "
   = t('pluralize.lead', campaign.leads_count.to_i) + " | "
   = t('pluralize.opportunity', campaign.opportunities_count.to_i)
   - if campaign.opportunities_count? && campaign.leads_count? && campaign.leads_count != 0
