--- a/app/assets/stylesheets/fat_free_crm/application.css.erb
+++ b/app/assets/stylesheets/fat_free_crm/application.css.erb
@@ -7,13 +7,9 @@
  */
 
 /*
-// TODO uncomment it
-require ./bootstrap-custom
-require jquery-ui.custom
-require jquery-ui/dialog
-*/
-
-/*
+ *= require ./bootstrap-custom
+ *= require jquery-ui.custom
+ *= require jquery-ui/dialog
  *= require ./select2
  *= require modalbox
  *= require ./rails
