--- a/app/views/fat_free_crm/accounts/_index_long.html.haml
+++ b/app/views/fat_free_crm/accounts/_index_long.html.haml
@@ -17,7 +17,7 @@
   .indent
     = link_to(account.name, account)
     - if amount != 0.0
-      %span.amount= number_to_currency(amount, precision: 0, unit: Monetize.parse(Spree::Config[:currency]).symbol)
+      %span.amount= number_to_currency(amount, precision: 0, unit: (defined?(Spree) ? Monetize.parse(Spree::Config[:currency]).symbol : FatFreeCrm::Setting.currency))
     &ndash;
     %tt
       = account.location + ", " unless account.location.blank?
