--- a/app/views/fat_free_crm/leads/_opportunity.html.haml
+++ b/app/views/fat_free_crm/leads/_opportunity.html.haml
@@ -29,9 +29,9 @@
           = o.text_field :probability, style: "width:110px; text-align:right;"
         %td= spacer
         %td
-          .label #{t :amount} (#{Monetize.parse(Spree::Config[:currency]).symbol}):
+          .label #{t :amount} (#{(defined?(Spree) ? Monetize.parse(Spree::Config[:currency]).symbol : FatFreeCrm::Setting.currency)}):
           = o.text_field :amount, style: "width:110px; text-align:right;"
         %td= spacer
         %td
-          .label #{t :discount} (#{Monetize.parse(Spree::Config[:currency]).symbol}):
+          .label #{t :discount} (#{(defined?(Spree) ? Monetize.parse(Spree::Config[:currency]).symbol : FatFreeCrm::Setting.currency)}):
           = o.text_field :discount, style: "width:110px; text-align:right;"
