--- a/app/views/fat_free_crm/accounts/_sidebar_show.html.haml
+++ b/app/views/fat_free_crm/accounts/_sidebar_show.html.haml
@@ -5,7 +5,7 @@
 .panel#summary
   - if @account.website
     %div
-      %b= link_to(truncate(@account.website, length: 30), @account.website.to_url, :"data-popup" => true, title: t(:open_in_window, @account.website))
+      %b= link_to(truncate(@account.website, length: 30), @account.website.to_complete_url, :"data-popup" => true, title: t(:open_in_window, @account.website))
   - if @account.email.present?
     %div
       %b= link_to_email(@account.email, 30)
