--- a/app/views/fat_free_crm/home/_account.html.haml
+++ b/app/views/fat_free_crm/home/_account.html.haml
@@ -18,7 +18,7 @@
 
     - unless current_user.preference[:accounts_index_view] == "accounts_index_brief"
       %dt
-        = link_to(account.website, account.website.to_url) + " | " if account.website.present?
+        = link_to(account.website, account.website.to_complete_url) + " | " if account.website.present?
         = link_to_email(account.email) + " | " if account.email.present?
         = t(:phone_small) + ": " + (account.toll_free_phone || account.phone) << " | " if account.toll_free_phone? || account.phone?
         = t('pluralize.contact', account.contacts_count) + " | "
